--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "react_starter",
+  "name": "react-quill-demo",
   "version": "1.0.0",
-  "description": "Starting setup for react redux project",
+  "description": "Demo of using react-quill",
   "main": "index.js",
   "scripts": {
     "start": "node dev_server.js",
@@ -12,12 +12,13 @@
   "license": "ISC",
   "repository": {
     "type": "git",
-    "url": "https://github.com/Learning-Fuze/react_starter.git"
+    "url": "https://github.com/scbowler/react-quill-demo"
   },
   "dependencies": {
     "babel-polyfill": "^6.26.0",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
+    "react-quill": "^1.2.3",
     "react-redux": "^5.0.6",
     "redux": "^3.7.2"
   },
